frame/support/test/tests/pallet_ui/storage_info_unsatisfied.stderr
error[E0277]: the trait bound `Bar: MaxEncodedLen` is not satisfied
  --> $DIR/storage_info_unsatisfied.rs:10:12
   |
10 |     #[pallet::generate_storage_info]
   |               ^^^^^^^^^^^^^^^^^^^^^ the trait `MaxEncodedLen` is not implemented for `Bar`
   |
   = note: required because of the requirements on the impl of `StorageInfoTrait` for `frame_support::pallet_prelude::StorageValue<_GeneratedPrefixForStorageFoo<T>, Bar>`
note: required by `storage_info`
  --> $DIR/storage.rs:71:2
   |
71 |     fn storage_info() -> Vec<StorageInfo>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
